# Tg_bot

./: Cargo.toml  structure.txt
src/: main.rs
src/BotServer/: mod.rs  server.rs
src/BotServer/router/: mod.rs  router.rs
src/BotServer/router/listeners/commands/start/: mod.rs  start.rs
src/DataBase/: server.rs
src/bot_req/: mod.rs  tg_req.rs
src/consts/: classes.rs  consts.rs  functs.rs  log.rs  mod.rs
