[package]
name = "tg_bot"
version = "0.0.9"
authors = ["amper <600amper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
awc = "1.0.1"
log = "0.4.8"
hyper = "0.13"
hyper-proxy = "0.6.0"
typed-headers = "0.2"
futures = { version = "0.3", features = ["compat"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures-util = "0.3.1"
mongodb = "0.9.0"
bson = "0.14.0"
#fern = "0.5"
#timer = "0.1.3"
#chrono = "0.4"
#simple-logging = "2.0.2"
[profile.dev]
debug = true  # Добавляет флаг `-g` для компилятора;